<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_overlay">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
             />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_menu_dj"
                android:text="@string/drawer_dj"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center_vertical"

                android:drawablePadding="10dp"
                android:padding="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_menu_prog"
                android:text="@string/drawer_prog"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center_vertical"

                android:drawablePadding="10dp"
                android:padding="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_menu_video"
                android:text="@string/drawer_video"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center_vertical"

                android:drawablePadding="10dp"
                android:padding="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
              />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_menu_musica"
                android:text="@string/drawer_musica"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center_vertical"

                android:drawablePadding="10dp"
                android:padding="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
              />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_menu_com"
                android:text="@string/drawer_com"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center_vertical"

                android:drawablePadding="10dp"
                android:padding="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_menu_publi"
                android:text="@string/drawer_publi"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center_vertical"

                android:drawablePadding="10dp"
                android:padding="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_menu_tv"
                android:text="@string/drawer_tv"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center_vertical"

                android:drawablePadding="10dp"
                android:padding="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
              />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>